# lawlint

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TEST_PLAN_pr47.md  biome.json  bunfig.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.agents/rules/: api-architecture.md  api-routes.md  ci-cd.md  commands-and-verification.md  comments.md  commits.md  data-fetching.md  db-naming.md  documentation.md  github-issues.md  infinite-queries.md  kubernetes-manifests.md  litgraph-pg-extension.md  llm-tool-names.md  migration-safety.md  rbac-pattern.md  secrets.md  ui-style-evolution.md  ui-styling.md  unit-testing.md  web-routes.md
.agents/skills/ask-oracle/: SKILL.md
.agents/skills/ask-oracle/scripts/: ask-oracle.sh
.agents/skills/deliver/: SKILL.md
.agents/skills/diagnose/: SKILL.md
.agents/skills/frontend-design/: SKILL.md
.agents/skills/grill/: SKILL.md
.agents/skills/prototype/: SKILL.md
.agents/skills/restate/: SKILL.md
.agents/skills/roundup/: SKILL.md
.agents/skills/testing-lawlint/: SKILL.md
.agents/skills/testing-web-component-isolation/: SKILL.md
.agents/skills/to-issues/: SKILL.md
.claude/: settings.json
.claude/agents/: docs-maintainer.md  implementer.md  oracle.md  perf-reviewer.md  security-reviewer.md  test-runner.md
.claude/hooks/: ci-check.sh  cwd-changed.sh  repo-guard.sh  task-completed.sh
.claude/rules/: api-architecture.md  api-routes.md  ci-cd.md  commands-and-verification.md  comments.md  commits.md  data-fetching.md  db-naming.md  documentation.md  github-issues.md  infinite-queries.md  kubernetes-manifests.md  litgraph-pg-extension.md  migration-safety.md  rbac-pattern.md  secrets.md  ui-style-evolution.md  ui-styling.md  unit-testing.md  web-routes.md
.claude/skills/: testing-lawlint
.devin/skills/: ask-oracle  deliver  grill  restate  roundup  testing-web-component-isolation
.github/: release-please-config.json
.github/workflows/: ci.yml  deploy.yml  release-please.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/website/: astro.config.mjs  blume.config.ts  components.json  components.ts  package.json  theme.css  tsconfig.json  wrangler.jsonc
apps/website/docs/: index.mdx  installation.mdx  quickstart.mdx
apps/website/docs/concepts/: file-formats.mdx  meta.ts  rules.mdx  scoring.mdx
apps/website/docs/guides/: ai-setup.mdx  authoring-rules.mdx  ci.mdx  fixing.mdx  judge.mdx  learn.mdx  linting.mdx  meta.ts
apps/website/docs/reference/: cli.mdx  configuration.mdx  json-output.mdx  meta.ts  sdk.mdx
apps/website/pages/: changelog.astro  download.astro  index.astro  playground.astro
apps/website/pages/_shared/: ChangelogEntry.astro  Downloads.astro  Layout.astro  Redirect.astro  SiteFooter.astro
apps/website/pages/rules/: [id].astro  index.astro
apps/website/public/: install.ps1  install.sh
apps/website/scripts/: generate-changelog.ts  generate-rule-docs.ts
apps/website/src/components/: DocsNav.astro  LawlintPlayground.tsx
apps/website/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  separator.tsx  textarea.tsx
apps/website/src/config/: downloads.ts
apps/website/src/layouts/: Layout.astro
apps/website/src/pages/: changelog.astro  download.astro  index.astro  playground.astro
apps/website/src/pages/docs/: cli.astro  getting-started.astro  sdk.astro
apps/website/src/pages/rules/: [id].astro  index.astro
apps/website/src/styles/: global.css
crates/lawlint-cli/: Cargo.toml  build.rs
crates/lawlint-cli/src/: diff.rs  init.rs  init_tui.rs  learn.rs  main.rs  progress.rs  tui.rs  ui.rs  update.rs
crates/lawlint-cli/tests/: cli.rs
crates/lawlint-core/: Cargo.toml
crates/lawlint-core/builtin/: style.yaml
crates/lawlint-core/builtin/rules/: empty-hedge.md  empty-hedge.yaml  no-achievement-language.md  no-achievement-language.yaml  no-ai-cliches.md  no-ai-cliches.yaml  no-binary-contrast.md  no-colon-reveal.md  no-dead-metaphors.md  no-dead-metaphors.yaml  no-doublets.md  no-doublets.yaml  no-dramatic-fragment.md  no-em-dash-overuse.md  no-em-dash-overuse.yaml  no-em-dash.yaml  no-empty-emphasis.md  no-empty-emphasis.yaml  no-en-dash.md  no-en-dash.yaml  no-faux-insight.md  no-foreign-phrases.md  no-foreign-phrases.yaml  no-hedging.md  no-hedging.yaml  no-importance-puffery.md  no-legalese.md  no-legalese.yaml  no-marketing-language.md  no-marketing-language.yaml  no-not-only.md  no-not-only.yaml  no-parenthetical-asides.md  no-parenthetical-asides.yaml  no-passive-overuse.md  no-passive-overuse.yaml  no-repetitive-openers.md  no-repetitive-openers.yaml  no-rhetorical-setups.md  no-robotic-transitions.md  (+25 more)
crates/lawlint-core/builtin/rules/skills/: empty-hedge.md
crates/lawlint-core/src/: config.rs  dispatch.rs  document.rs  error.rs  judge.rs  lib.rs  loader.rs  markdown.rs  prompt.rs  registry.rs  rule.rs  scoring.rs  segment.rs  types.rs
crates/lawlint-core/src/engines/: density.rs  leading.rs  mod.rs  phrase.rs  statistical.rs
crates/lawlint-core/tests/fixtures/: clean.txt
crates/lawlint-docx/: Cargo.toml
crates/lawlint-docx/src/: lib.rs  pkg.rs  project.rs  revise.rs
crates/lawlint-docx/tests/: pipeline.rs
crates/lawlint-docx/tests/fixtures/: sample.docx
crates/lawlint-eval/: Cargo.toml  README.md
crates/lawlint-eval/corpus/: baseline.json  corpus.jsonl
crates/lawlint-eval/src/: foundry.rs  judged.rs  lib.rs  sourcing.rs
crates/lawlint-judge/: Cargo.toml
crates/lawlint-judge/src/: cache.rs  candle_client.rs  credentials.rs  foundry.rs  lib.rs  mistralrs_client.rs
crates/lawlint-judge/tests/: local_model.rs
crates/lawlint-wasm/: Cargo.toml
crates/lawlint-wasm/src/: lib.rs
docs/: engine-design.md  eval-corpus.md
scripts/: build-wasm.sh  check-commit-messages.mjs  lint-website-copy.py  sync-agent-config.sh
