[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/lawlint-core",
    "crates/lawlint-cli",
    "crates/lawlint-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
