[package]
name = "lawlint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lawlint"
path = "src/main.rs"

[dependencies]
clap.workspace = true
colored.workspace = true
lawlint-core = { path = "../lawlint-core" }
lawlint-judge = { path = "../lawlint-judge" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
