[package]
name = "lawlint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lawlint"
path = "src/main.rs"

[dependencies]
clap.workspace = true
colored.workspace = true
lawlint-core = { path = "../lawlint-core" }
lawlint-judge = { path = "../lawlint-judge" }
serde.workspace = true
serde_json.workspace = true
# Self-update / update-check (docs/engine-design.md §11).
ureq = "2"           # blocking HTTP, rustls TLS — no async runtime pulled in
semver = "1"         # version comparison
dirs = "5"           # cache dir for the update-check gate
sha2.workspace = true
flate2 = "1"         # tar.gz extraction
tar = "0.4"
self-replace = "1"   # atomic replace of the running executable
# TUI for bare `lawlint` invocations.
ratatui = "0.30"
crossterm = "0.29"
ratatui-textarea = "0.9"

[target.'cfg(windows)'.dependencies]
zip = "0.6"          # Windows release archives are .zip

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
