[package]
name = "lawlint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
strsim.workspace = true
sha2.workspace = true
include_dir.workspace = true
pulldown-cmark.workspace = true
