[package]
name = "lawlint-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
sourcing = ["dep:ureq"]

[dependencies]
clap.workspace = true
lawlint-core = { path = "../lawlint-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = { version = "2", optional = true }
