[package]
name = "lawlint-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
sourcing = ["dep:ureq", "dep:lawlint-judge"]
# Opt-in judged evaluation (`judged_report`): runs the tier-3 judge over the
# corpus. Slow and backend-dependent, so never part of the default CI gate.
judged = ["dep:lawlint-judge"]

[dependencies]
clap.workspace = true
lawlint-core = { path = "../lawlint-core" }
# The Azure Foundry client lives behind the ax boundary in lawlint-judge;
# the sourcing binaries consume it from there.
lawlint-judge = { path = "../lawlint-judge", optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = { version = "2", optional = true }
