[package]
name = "lawlint-judge"
description = "Tier-3 judge backends for lawlint (native only). ax (axllm) is the AI interface for all backends."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
lawlint-core = { path = "../lawlint-core" }
# ax is the AI interface for ALL backends (hard product requirement).
# Pinned: AxJudge is written against the v23 AxAIClient contract
# (`chat(&mut self, Value) -> AxResult<Value>`, blocking transport).
# 23.0.3 fixes an Anthropic "adaptive" model bug (opus-4-8 et al reject a
# `temperature` field axllm used to send unconditionally); 23.0.1 does not
# have that fix.
axllm = "=23.0.3"
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
# Azure Foundry ax client — blocking HTTP, no async runtime. Every backend is
# now an HTTP client, so there is nothing left to feature-gate.
ureq = "2"

[dev-dependencies]
tempfile = "3"
